# gb-rust

./: .gitignore  Cargo.toml  README.md
src/: LD.rs  add.rs  and.rs  cpu.rs  emu.rs  gfx.rs  gpu.rs  joypad.rs  ld.rs  main.rs  mbc.rs  misc.rs  mmu.rs  ppu.rs  sub.rs  timer.rs  util.rs  vram.rs  xor.rs
src/cpu/: adc.rs  add.rs  add16.rs  and.rs  bit.rs  call.rs  cp.rs  dec.rs  dec16.rs  inc.rs  jp.rs  ld.rs  misc.rs  mod.rs  or.rs  ret.rs  rot.rs  rst.rs  sbc.rs  shift.rs  sub.rs  swap.rs  xor.rs
src/cpu/instrs/: adc.rs  add.rs  add16.rs  and.rs  bit.rs  call.rs  cp.rs  dec.rs  dec16.rs  inc.rs  inc16.rs  jp.rs  ld.rs  misc.rs  mod.rs  or.rs  ret.rs  rot.rs  rst.rs  sbc.rs  shift.rs  sub.rs  swap.rs  xor.rs
src/frontend/: gfx.rs  mod.rs
src/gb/: joypad.rs  mbc.rs  mmu.rs  mod.rs  ppu.rs  timer.rs  vram.rs
src/gb/cpu/: mod.rs
src/gb/cpu/instrs/: adc.rs  add.rs  add16.rs  and.rs  bit.rs  call.rs  cp.rs  dec.rs  dec16.rs  inc.rs  inc16.rs  jp.rs  ld.rs  misc.rs  mod.rs  or.rs  ret.rs  rot.rs  rst.rs  sbc.rs  shift.rs  sub.rs  swap.rs  xor.rs
